# Bauman_university

./: 1.cpp  CMake.txt  CMakeLists.txt  Point.cpp  Point.txt  creationDB.cpp  interface.glade  main.cpp
Point/: CMakeLists.txt  Point.cpp  Point.h
src/: main.cpp  main_window.cpp  main_window.h
